Error CS0103 The name 'provider' does not exist in the current context HealthChecker

--- a/HealthChecker/Views/Home/Health.cshtml
+++ b/HealthChecker/Views/Home/Health.cshtml
@@ -6,7 +6,7 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's health.</p>
+<p>Charts</p>
 
 <p>
     <span>@Model.Status</span> - <span>Duration: @Model.TotalDuration.TotalMilliseconds</span>
