--- a/HealthChecker/Views/Home/About.cshtml
+++ b/HealthChecker/Views/Home/About.cshtml
@@ -4,7 +4,7 @@
 
 <div class="text-center">
     <h1 class="display-4">About the Software Engineer</h1>
-    <h3 align="center"><a href="https://github.com/ThulaniNyama/StackWorxHealthChecker.io">About Thulani</a></h3>
+    <h3 align="center"><a href="https://www.linkedin.com/in/thulani-nyama-816194198/">About Thulani</a></h3>
     <p align="center">
         <br />
         Thulani is a prospective Software Engineer at StackWorx.<br />
