--- a/HealthChecker/Views/Home/Index.cshtml
+++ b/HealthChecker/Views/Home/Index.cshtml
@@ -4,16 +4,15 @@
 
     <div class="text-center">
         <h1 class="display-4">Welcome to StackWorx Health Checker</h1>
-        <h3 align="center"><a href="https://github.com/ThulaniNyama/StackWorxHealthChecker.io">About Thulani</a></h3>
+        <h3 align="center"><a href="https://github.com/ThulaniNyama/StackWorxHealthChecker.io">About Health Checker</a></h3>
         <p align="center">
             <br />
-            Thulani is a prospective Software Engineer at StackWorx.<br />
-            AKA "Tools" that's what his friends and peers call him.<br />
-            We assume it's the meer fact that he is a coder's "toolbox".<br />
-            Be it design or development... With this Health Checker application<br />
-            he is proving to be the best fit for StackWorx by utilizing<br />
-            versitile skills such as ASP.Net, IHttpClientFactory, MVC,<br />
-            Entity Framework and GraphQL. He engineered this<br />
-            Health Checker application to start "stacking" at StackWorx.<br />
+            StackWorx Health Checker is an application that utilizes<br />
+            Microsoft's build-in Health Checker. It sends calls to urls<br />
+            and returns and displays statuses of the url and the overall<br />
+            status of the application. It was build with ASP.Net Core<br />
+            IHttpClientFactory, MVC architecture, Entity Framework and GraphQL.
+            Engineered for StackWorx by Thulani Nyama. To find out more about<br />
+            the software engineer view the about page.<br />
         </p>
     </div>
